---
title: Chat Client
---
classDiagram
    ChatClient *-- Mode : has-a
    Mode <|.. PlainText
    Mode <|.. Encrypted
    Mode <|.. Compressed
    Mode <|.. Base64
    class ChatClient{
        -mode: Mode
        +__init__(mode: Mode)
        +set_mode(mode: Mode) None
        +send(message: string) string
    }
    class Mode{
        <<interface>>
        +transform_message(message: string) string
    }
    class PlainText{
        +transform_message(message: string) string
        +__str__() string
    }
    class Encrypted{
        +transform_message(message: string) string
        +__str__() string
    }
    class Compressed{
        +transform_message(message: string) string
        +__str__() string
    }
    class Base64{
        +transform_message(message: string) string
        +__str__() string
    }

